@@ -491,6 +491,39 @@ sub _migrateTo32
     $self->_overrideDaemons() if $self->configured();
 }
 
+sub _checkEnableIPs
+{
+    my ($self) = @_;
+    my $network = $self->global()->modInstance('network');
+    my @dhcpIfaces = ();
+    my $noAddresses = 1;
+    foreach my $iface (@{ $network->allIfaces() }) {
+        my @addresses = @{ $network->ifaceAddresses($iface) };
+        if (@addresses) {
+            $noAddresses = 0;
+            last;
+        }
+        if ($network->ifaceMethod($iface) eq 'dhcp') {
+            push @dhcpIfaces, $iface;
+        }
+    }
+    if ($noAddresses) {
+        my $errMsg;
+        if (@dhcpIfaces) {
+            $errMsg = __x('Cannot enable Users and Computers module because your system has not availabe IPs. Since you have dhcp interfaces ({ifaces}) it is possible that you do nt have received leases. Saving changes if network module has just been configured or waiting for a lease can solve this situation',
+                          ifaces => "@dhcpIfaces"
+                         );
+        } else {
+            $errMsg = __x('Cannot enable Usersand computers module  because your system has not availabe IPs. {oh}Configuring network interfaces{ch} and saving changes can solve this situation',
+                          oh => '<a href="/Network/Ifaces">',
+                          ch => '</a>'
+                          );
+        }
+
+        EBox::Exceptions::External->throw($errMsg);
+    }
+}
+
 sub setupKerberos
 {
     my ($self) = @_;
@@ -609,6 +642,8 @@ sub enableActions
 sub _internalServerEnableActions
 {
     my ($self) = @_;
+
+    $self->_checkEnableIPs();
 
     # Stop slapd daemon
     EBox::Sudo::root(
