@@ -1,4 +1,5 @@
 HEAD
+	+ Check available IP addresses when enable module
 	+ Better integration of edit groups for mail group aliases
 	+ Update group icon when type of group changes
 	+ Implement _preModifyUser on LdapUserBase
